# KeyboardCutVideo_ResetResolution

./: .gitignore  CMakeLists.txt  cut_video_handle.cpp  modify_uvc_parameter.cpp
